--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-	<p color='red'>This document contains information about Joshua Henderson.</p>
+	<p color="red">This document contains information about Joshua Henderson.</p>
 </body>
 </html>
