--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Joshua Henderson</title>
 </head>
 
 <body>
-	<p color="red">This document contains information about Joshua Henderson.</p>
+	<h1>Profile</h1>
+	<p>This page contains information about Joshua Henderson, as aspiring programmer and graphics designer from Lake Charles, Louisiana.</p>
 </body>
 </html>
