--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Joshua Henderson</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
 	<h1>Profile</h1>
 	<p>This page contains information about Joshua Henderson, as aspiring programmer and graphics designer from Lake Charles, Louisiana.</p>
+	<br>
+	<br>
+	<a href="csci426joshuahenderson.gearhostpreview.com" target="_blank">All About Cocktails<a>
+	<p>This site was a project from my web development course at McNeese, where I utilized HTML and CSS.
 </body>
 </html>
