Website design created
Most initial designing

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+
+	Title: Joshua Henderson
+	Date Created: 11/27/2020
+	Author: Joshua Henderson
+
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,11 +15,46 @@
 </head>
 
 <body>
-	<h1>Profile</h1>
-	<p>This page contains information about Joshua Henderson, as aspiring programmer and graphics designer from Lake Charles, Louisiana.</p>
-	<br>
-	<br>
-	<a href="csci426joshuahenderson.gearhostpreview.com" target="_blank">All About Cocktails<a>
-	<p>This site was a project from my web development course at McNeese, where I utilized HTML and CSS.
+	<div id="content">
+		<div id="navBar">
+			<ul>
+				<li><a href="#">CONTACT</a></li>
+				<li><a href="#">PROJECTS</a></li>
+				<li><a href="#">HOME</a></li>
+			</ul>
+		</div>
+		<div id="imageBox">
+			<img src="josh.jpg" width="300" height="300" />
+		</div>
+		<div id="container1">
+			<p id="firstName">JOSHUA</p>
+			<p id="lastName">&nbsp;&nbsp;&nbsp;HENDERSON</p>
+		</div>
+
+		<div id="container2">
+			<p class="subtext">WEB DEVELOPER &nbsp;&nbsp; | &nbsp;&nbsp; PROGRAMMER &nbsp;&nbsp; | &nbsp;&nbsp; DESIGNER</p>
+		</div>
+		<br>
+		<br>
+		<div id="cred">
+			<div id="credBox1">
+				<ul>
+					<li>BIRTHDATE</li>
+					<li>HOMETOWN</li>
+					<li>EMAIL</li>
+				</ul>
+			</div>
+			<div id="credBox2">
+				<ul>
+					<li>FEBRUARY 22 1983</li>
+					<li>LAKE CHARLES LOUISIANA</li>
+					<li>joshuaadamhenderson@gmail.com</li>
+				</ul>
+			</div>
+			<br>
+			<br>
+			<p>Graduate of McNeese State University's class of 2019. Seeking a career in programming industries abroad. Self-directed, persistent, and provides clear communication. Contact me to see how I can improve your business.
+		</div>
+	</div>
 </body>
 </html>
