New html files and links

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,8 @@
 			</div>
 			<br>
 			<br>
-			<p>Graduate of McNeese State University's class of 2019. Seeking a career in programming industries abroad. Self-directed, persistent, and provides clear communication. Contact me to see how I can improve your business.		</div> 
+			<p>Graduate of McNeese State University's class of 2019. Seeking a career in programming industries abroad. Self-directed, persistent, and provides clear communication. Contact me to see how I can improve your business.
+		</div>
 	</div>
 </body>
 </html>
