--- a/projects.html
+++ b/projects.html
@@ -36,24 +36,14 @@
 		</div>
 		<br>
 		<br>
-		<div id="cred">
-			<div id="credBox1">
-				<ul>
-					<li>BIRTHDATE</li>
-					<li>HOMETOWN</li>
-					<li>EMAIL</li>
-				</ul>
+		<div>
+			<div class="projectBox">
+				<a href="http://msubookstore.gearhostpreview.com/">McNeese Bookstore</a>
 			</div>
-			<div id="credBox2">
-				<ul>
-					<li>FEBRUARY 22 1983</li>
-					<li>LAKE CHARLES LOUISIANA</li>
-					<li>joshuaadamhenderson@gmail.com</li>
-				</ul>
+			<div class="projectBox">
+				<a href="http://csci426joshuahenderson.gearhostpreview.com/">All About Cocktails</a>
 			</div>
-			<br>
-			<br>
-			<p>Graduate of McNeese State University's class of 2019. Seeking a career in programming industries abroad. Self-directed, persistent, and provides clear communication. Contact me to see how I can improve your business.		</div> 
+		</div>
 	</div>
 </body>
 </html>
