Various major changes

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 	Title: Joshua Henderson
 	Date Created: 11/27/2020
 	Author: Joshua Henderson
-
+	Page: contact.html
+	
 -->
 
 <!DOCTYPE html>
@@ -26,34 +27,18 @@
 		<div id="imageBox">
 			<img src="josh.jpg" width="300" height="300" />
 		</div>
-		<div id="container1">
+		<div id="nameCont">
 			<p id="firstName">JOSHUA</p>
 			<p id="lastName">&nbsp;&nbsp;&nbsp;HENDERSON</p>
 		</div>
 
-		<div id="container2">
+		<div id="titleCont">
 			<p class="subtext">WEB DEVELOPER &nbsp;&nbsp; | &nbsp;&nbsp; PROGRAMMER &nbsp;&nbsp; | &nbsp;&nbsp; DESIGNER</p>
 		</div>
-		<br>
-		<br>
-		<div id="cred">
-			<div id="credBox1">
-				<ul>
-					<li>BIRTHDATE</li>
-					<li>HOMETOWN</li>
-					<li>EMAIL</li>
-				</ul>
-			</div>
-			<div id="credBox2">
-				<ul>
-					<li>FEBRUARY 22 1983</li>
-					<li>LAKE CHARLES LOUISIANA</li>
-					<li>joshuaadamhenderson@gmail.com</li>
-				</ul>
-			</div>
+		<div id="contacts">
+			<a href="https://www.linkedin.com/in/josh-henderson-7b715648" target="_blank"><img src="linkedin.png" alt="LinkedIn icon" width="50px" height="50px" /></a>
 			<br>
-			<br>
-			<p>Graduate of McNeese State University's class of 2019. Seeking a career in programming industries abroad. Self-directed, persistent, and provides clear communication. Contact me to see how I can improve your business.
+			<a href="mailto:joshuaadamhenderson@gmail.com">joshuaadamhenderson@gmail.com</a>
 		</div>
 	</div>
 </body>
