--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	Title: Joshua Henderson
 	Date Created: 11/27/2020
 	Author: Joshua Henderson
+	Page: index.html
 
 -->
 
@@ -26,29 +27,27 @@
 		<div id="imageBox">
 			<img src="josh.jpg" width="300" height="300" />
 		</div>
-		<div id="container1">
+		<div id="nameCont">
 			<p id="firstName">JOSHUA</p>
 			<p id="lastName">&nbsp;&nbsp;&nbsp;HENDERSON</p>
 		</div>
 
-		<div id="container2">
+		<div id="titleCont">
 			<p class="subtext">WEB DEVELOPER &nbsp;&nbsp; | &nbsp;&nbsp; PROGRAMMER &nbsp;&nbsp; | &nbsp;&nbsp; DESIGNER</p>
 		</div>
 		<br>
 		<br>
 		<div id="cred">
-			<div id="credBox1">
+			<div id="credBoxColLeft">
 				<ul>
 					<li>BIRTHDATE</li>
 					<li>HOMETOWN</li>
-					<li>EMAIL</li>
 				</ul>
 			</div>
-			<div id="credBox2">
+			<div id="credBoxColRight">
 				<ul>
 					<li>FEBRUARY 22 1983</li>
 					<li>LAKE CHARLES LOUISIANA</li>
-					<li>joshuaadamhenderson@gmail.com</li>
 				</ul>
 			</div>
 			<br>
