--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 	Title: Joshua Henderson
 	Date Created: 11/27/2020
 	Author: Joshua Henderson
+	Page: projects.html
 
 -->
 
@@ -26,22 +27,28 @@
 		<div id="imageBox">
 			<img src="josh.jpg" width="300" height="300" />
 		</div>
-		<div id="container1">
+		<div id="nameCont">
 			<p id="firstName">JOSHUA</p>
 			<p id="lastName">&nbsp;&nbsp;&nbsp;HENDERSON</p>
 		</div>
 
-		<div id="container2">
+		<div id="titleCont">
 			<p class="subtext">WEB DEVELOPER &nbsp;&nbsp; | &nbsp;&nbsp; PROGRAMMER &nbsp;&nbsp; | &nbsp;&nbsp; DESIGNER</p>
 		</div>
 		<br>
 		<br>
-		<div>
-			<div class="projectBox">
-				<a href="http://msubookstore.gearhostpreview.com/">McNeese Bookstore</a>
+		<div class="projectBox">
+			<img src="book.jpg" alt="Book Icon" width="80px" height="80px" />
+			<div class="projectLink">
+				<a href="http://msubookstore.gearhostpreview.com/" target="_blank" >MCNEESE BOOKSTORE</a>
+				<p>This page is an example of my university's online bookstore, in which elements of PHP were introduced.</p>
 			</div>
-			<div class="projectBox">
-				<a href="http://csci426joshuahenderson.gearhostpreview.com/">All About Cocktails</a>
+		</div>
+		<div class="projectBox">
+			<img src="glass.jpg" alt="Cocktail Glass Icon" width="80px" height="80px" />
+			<div class="projectLink">
+				<a href="http://csci426joshuahenderson.gearhostpreview.com/" target="_blank">ALL ABOUT COCKTAILS</a>
+				<p>My Web Development course required this website to showcase HTML and CSS fundamentals.</p>
 			</div>
 		</div>
 	</div>
