Initial Bootstrap addition
Beginning phase. Added header info

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 	Author: Joshua Henderson
 	Page: index.html
 
+	This site uses Bootstrap 4 elements for HTML & CSS.
+
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Joshua Henderson</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
