--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,22 @@
 	Title: Joshua Henderson
 	Date Created: 11/27/2020
 	Author: Joshua Henderson
-	Page: contact.html
-	
+	Page: index.html
+
+	This site uses Bootstrap 4 elements for HTML & CSS.
+
 -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>Joshua Henderson</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
