--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		<div id="title" class="container-sm">
 			<div class="row">
 			
-				<div class="col-lg-8">
-					<div class="row pt-5" id="firstName">
+				<div class="col-sm-8">
+					<div class="row pt-5 display-4" id="firstName">
 						JOSHUA
 					</div>
-					<div class="row" id="lastName">
+					<div class="row display-2" id="lastName">
 						&nbsp;&nbsp;HENDERSON
 					</div>
 					<div class="row">
