--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 			<div class="row">
 			
 				<div class="col-sm-8">
-					<div class="row pt-5 display-4" id="firstName">
+					<div class="row pt-5" id="firstName">
 						JOSHUA
 					</div>
-					<div class="row display-2" id="lastName">
+					<div class="row" id="lastName">
 						&nbsp;&nbsp;HENDERSON
 					</div>
 					<div class="row">
