--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,11 @@
 				</div>
 				
 				<div class="col pt-3">
-					<a class="link" href="http://msubookstore.gearhostpreview.com/" target="_blank" >MCNEESE BOOKSTORE</a>
+					<div class="row">
+						<div class="col">
+							<a class="link" href="http://msubookstore.gearhostpreview.com/" target="_blank" >MCNEESE BOOKSTORE</a>
+						</div>
+					</div>
 					<p>This page is an example of my university's online bookstore, in which elements of PHP were introduced.</p>
 				</div>
 				
@@ -89,7 +93,11 @@
 				</div>
 			
 				<div class="col pt-3">
-					<a class="link" href="http://csci426joshuahenderson.gearhostpreview.com/" target="_blank">ALL ABOUT COCKTAILS</a>
+					<div class="row">
+						<div class="col">
+							<a class="link" href="http://csci426joshuahenderson.gearhostpreview.com/" target="_blank">ALL ABOUT COCKTAILS</a>
+						</div>
+					</div>
 					<p>My Web Development course required this website to showcase HTML and CSS fundamentals.</p>
 				</div>
 			</div>
