--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,12 @@
 				<div class="col-sm-3 pt-3" style="text-align: center;">
 					<a style="font-size: 120%" class="link" href="mailto:joshuaadamhenderson@gmail" target="_blank" >joshuaadamhenderson@gmail.com</a>
 				</div>
+				
 				<br/>
 				<br/>
 				<br/>
 			</div>
+			<p>Available Monday - Friday, 8:00 am - 6:00 pm. Quick response time.</p>
 		</div>
 	</div>
 </body>
