--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		Information
 		------------------------------------------------------------------------------->		
 		<br/>
-		<div class="container-sm">
+		<div class="container-sm" id="info">
 			<div class="row">
 				<div class="col-sm-2">
 					<strong>BIRTHDATE</strong>
@@ -96,6 +96,16 @@
 			Self-directed, persistent, and provides clear communication.
 			Contact me to see how I can improve your business.
 			</p>
+			
+			<h4>WEB DEVELOPMENT</h4>
+			<p>Experience in styling web documents using HTML and CSS, 
+			and providing interaction with JavaScript.
+			
+			<h4>GRAPHIC DESIGN</h4>
+			<p>Proficiency in basic design principles and composition.</p>
+			
+			<h4>SOFTWARE DESIGN</h4>
+			<p>Familiar with the object-oriented approach to application programming.</p>
 		</div>
 	</div>
 </body>
