--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,8 @@
 							<a class="link" href="http://msubookstore.gearhostpreview.com/" target="_blank" >MCNEESE BOOKSTORE</a>
 						</div>
 					</div>
-					<p>This page is an example of my university's online bookstore, in which elements of PHP were introduced.</p>
+					<p>This page is an example of my university's online bookstore, in which elements of PHP were introduced. 
+					Users can create an account, log in, and add items to a cart.</p>
 				</div>
 				
 			</div>
@@ -93,7 +94,8 @@
 							<a class="link" href="http://csci426joshuahenderson.gearhostpreview.com/" target="_blank">ALL ABOUT COCKTAILS</a>
 						</div>
 					</div>
-					<p>My Web Development course required this website to showcase HTML and CSS fundamentals.</p>
+					<p>My Web Development course required this website to showcase HTML and CSS fundamentals. Basic hyperlink and navigation bar
+					techniques.</p>
 				</div>
 			</div>
 			
@@ -111,7 +113,8 @@
 					</div>
 					<p>My gaming seminar project using the GDevelop5 game engine.</p>
 				</div>
-			</div>		</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
