--- a/cosmoquest.html
+++ b/cosmoquest.html
@@ -66,7 +66,7 @@
 		<br/>
 		<div class="container-sm">
 			<div class="row justify-content-center pt-2 pb-2">
-				<a href="#" class="link" style="font-size: 2em">Download CosmoQuest for Windows</a>
+				<a href="CosmoQuest.exe" download="CosmoQuest" class="link" style="font-size: 2em">Download CosmoQuest for Windows</a>
 			</div>
 			<div class="row" style="border-top: solid 1px #333333;">
 				<div class="col-sm-4 my-5">
